
7.79  2018-05-12

7.78  2018-05-11
  - Deprecated delay helper in Mojolicious::Plugin::DefaultHelpers.
  - Added EXPERIMENTAL new_tag method to Mojo::DOM. (jberger, sri)
  - Added EXPERIMENTAL tag method to Mojo::DOM::HTML.
  - Added EXPERIMENTAL tag_to_html function to Mojo::DOM::HTML.
  - Improved performance of all DOM manipulation methods in Mojo::DOM
    significantly when reusing Mojo::DOM objects.
  - Fixed a Windows directory traversal security issue. (dmanto)

7.77  2018-04-28
  - Added support for namespace selectors like "ns|*" to Mojo::DOM::CSS.
    (jberger)
  - Added support for :link and :visited pseudo-classes to Mojo::DOM::CSS.
  - Added support for hyphen-separated list attribute selectors like
    "[hreflang|=en]" to Mojo::DOM::CSS.

7.76  2018-04-23
  - Due to lack of domain experts on the team, Windows is no longer officially
    supported. Moving forward, we will try to keep Mojolicious installable on
    Windows, but cannot make any promises regarding security and/or reliability.
  - Fixed a bug in Mojolicious::Plugin::Config where the config stash value was
    not available when the config_override feature was used. (tim)

7.75  2018-04-09
  - Deprecated placeholder quoting with "(placeholder)" in favor of
    "<placeholder>".
  - Fixed warnings in Mojo::Collection.

7.74  2018-04-06
  - Improved unknown placeholder types to match nothing in
    Mojolicious::Routes::Pattern.

7.73  2018-04-05
  - Added support for routes with placeholder types.
  - Added types attribute to Mojolicious::Routes and
    Mojolicious::Routes::Pattern.
  - Added add_type method to Mojolicious::Routes.
  - Added to_file method to Mojo::Asset, Mojo::Asset::File and
    Mojo::Asset::Memory.
  - Added num placeholder type to Mojolicious::Routes.
  - Removed deprecated use of Mojo::Promise::all and Mojo::Promise::race as
    instance methods.

7.72  2018-04-02
  - Improved Mojo::Content::MultiPart performance for large numbers of parts.
    (philipspencer)